--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,11 @@
 
 
 
+
+
+
 /* Swiper */
-.swiper {
+/* .swiper {
     width: 100%;
     padding-top: 3.125rem;
   }
@@ -34,10 +37,10 @@
   .swiper-slide-active div {
     display: block;
     opacity: 1;
-  }
+  } */
 
   /* I need to figure dynamically generating the urls */
-  .swiper-slide-one {
+  /* .swiper-slide-one {
     background: linear-gradient(to top, #0f2027, #203a4300, #2c536400),
       url("https://images.unsplash.com/photo-1628944682084-831f35256163?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80")
         no-repeat 50% 50% / cover;
@@ -88,4 +91,4 @@
     .swiper {
       width: 85%;
     }
-  }
+  } */
